@@ -1,30 +1,30 @@
 {
     "STATUSBAR": {
-      "CLUSTER": "Cluster",
-      "VERSION": "Version",
-      "SNAPSHOT": "SNAPSHOT",
-      "NODES": "Nodes",
-      "HEALTH": "Health",
-      "DATA": "Data",
-      "CHECKS": "Checks",
-      "CHECK": "Check",
-      "FAILED": "failed",
-      "CLUSTER_OFFLINE": "Cluster is offline",
-      "HELP": "Help",
-      "CRATE_MANUAL": "CrateDB Manual",
-      "DOC_MSG": "Read the online documentation",
-      "NOTIFICATIONS": "Notifications",
-      "OLD_VERSION_TIP": "You're using an old version ({{ version }}) of CrateDB",
-      "UPDATE_TIP": "Please consider updating to version {{ version }}!",
-      "NO_NOTIFICATION": "Oh no! There are no notifications yet.",
-      "MARK_ALL_READ": "Mark as read"
+        "CLUSTER": "Cluster",
+        "VERSION": "Version",
+        "SNAPSHOT": "SNAPSHOT",
+        "NODES": "Nodes",
+        "HEALTH": "Health",
+        "DATA": "Data",
+        "CHECKS": "Checks",
+        "CHECK": "Check",
+        "FAILED": "failed",
+        "CLUSTER_OFFLINE": "Cluster is offline",
+        "HELP": "Help",
+        "CRATE_MANUAL": "CrateDB Manual",
+        "DOC_MSG": "Read the online documentation",
+        "NOTIFICATIONS": "Notifications",
+        "OLD_VERSION_TIP": "You're using an old version ({{ version }}) of CrateDB",
+        "UPDATE_TIP": "Please consider updating to version {{ version }}!",
+        "NO_NOTIFICATION": "Oh no! There are no notifications yet.",
+        "MARK_ALL_READ": "Mark as read"
     },
     "NAVIGATION": {
-      "OVERVIEW": "Overview",
-      "CONSOLE": "Console",
-      "TABLE": "Tables",
-      "VIEW": "Views",
-      "CLUSTER": "Cluster"
+        "OVERVIEW": "Overview",
+        "CONSOLE": "Console",
+        "TABLE": "Tables",
+        "VIEW": "Views",
+        "CLUSTER": "Cluster"
     },
     "OVERVIEW": {
         "HEALTH": "Health",
@@ -133,7 +133,7 @@
     },
     "HELP": {
         "TITLE": "Looking for help?",
-        "STACK_OVERFLOW_TITLE": "Stack overflow",
+        "STACK_OVERFLOW_TITLE": "Stack Overflow",
         "STACK_OVERFLOW_MSG": "Check Stack Overflow for common problems.",
         "SLACK_TITLE": "Slack",
         "SLACK_MSG": "Ask Crate.io engineers on our Slack channel.",
