@@ -1,30 +1,30 @@
 {
     "STATUSBAR": {
-      "CLUSTER": "Clúster",
-      "VERSION": "Versión",
-      "SNAPSHOT": "SNAPSHOT",
-      "NODES": "Nodos",
-      "HEALTH": "Estado",
-      "DATA": "Datos",
-      "CHECKS": "Chequeos",
-      "CHECK": "Chequeo",
-      "FAILED": "fallo",
-      "CLUSTER_OFFLINE": "Clúster offline",
-      "HELP": "Ayuda",
-      "CRATE_MANUAL": "Manual de CrateDB",
-      "DOC_MSG": "Leer la documentación online",
-      "NOTIFICATIONS": "Notificaciones",
-      "OLD_VERSION_TIP": "Tienes versión antigua ({{ version }}) de CrateDB",
-      "UPDATE_TIP": "Se recomienda actualizar a la versión {{ version }}!",
-      "NO_NOTIFICATION": "¡Oh, no! Aún no hay notificaciones.",
-      "MARK_ALL_READ": "Marcar como leído"
+        "CLUSTER": "Clúster",
+        "VERSION": "Versión",
+        "SNAPSHOT": "SNAPSHOT",
+        "NODES": "Nodos",
+        "HEALTH": "Estado",
+        "DATA": "Datos",
+        "CHECKS": "Chequeos",
+        "CHECK": "Chequeo",
+        "FAILED": "fallo",
+        "CLUSTER_OFFLINE": "Clúster offline",
+        "HELP": "Ayuda",
+        "CRATE_MANUAL": "Manual de CrateDB",
+        "DOC_MSG": "Leer la documentación online",
+        "NOTIFICATIONS": "Notificaciones",
+        "OLD_VERSION_TIP": "Tienes versión antigua ({{ version }}) de CrateDB",
+        "UPDATE_TIP": "Se recomienda actualizar a la versión {{ version }}!",
+        "NO_NOTIFICATION": "¡Oh, no! Aún no hay notificaciones.",
+        "MARK_ALL_READ": "Marcar como leído"
     },
     "NAVIGATION": {
-      "OVERVIEW": "Vista general",
-      "CONSOLE": "Consola",
-      "TABLE": "Tablas",
-      "VIEW": "Views",
-      "CLUSTER": "Clúster"
+        "OVERVIEW": "Vista general",
+        "CONSOLE": "Consola",
+        "TABLE": "Tablas",
+        "VIEW": "Views",
+        "CLUSTER": "Clúster"
     },
     "OVERVIEW": {
         "HEALTH": "Estado",
@@ -133,7 +133,7 @@
     },
     "HELP": {
         "TITLE": "Looking for help?",
-        "STACK_OVERFLOW_TITLE": "Stack overflow",
+        "STACK_OVERFLOW_TITLE": "Stack Overflow",
         "STACK_OVERFLOW_MSG": "Check Stack Overflow for common problems.",
         "SLACK_TITLE": "Slack",
         "SLACK_MSG": "Ask Crate.io engineers on our Slack channel.",
