@@ -60,6 +60,7 @@
                 <div class="cr-dropdown__list__item" ng-click="changeLanguage('en')"> English</div>
                 <div class="cr-dropdown__list__item" ng-click="changeLanguage('de')"> Deutsch</div>
                 <div class="cr-dropdown__list__item" ng-click="changeLanguage('es')"> Español</div>
+                <div class="cr-dropdown__list__item" ng-click="changeLanguage('fr')"> Français</div>
               </div>
             </div>
           </div>
